# ZHT-Compiler

./: .gitignore  README.md  REPORT.md  app.py  pyproject.toml
examples/: invalid_syntax.mc  invalid_type.mc  invalid_undeclared.mc  valid_minimal.mc
src/mini_compiler/: __init__.py  ast.py  cli.py  compiler.py  errors.py  ir.py  lexer.py  parser.py  runtime.py  semantics.py  symbols.py  token.py  zht_spec.py
src/zht_compiler/: __init__.py  ast.py  compiler_engine.py  errors.py  ir.py  lexer.py  parser.py  runtime.py  semantics.py  token.py
tests/: test_compiler.py  test_lexer.py  test_symbols.py
